# niks-ml-library

./: .gitignore  CMakeLists.txt  README.md  test.bat  test.sh
samples/: iris_logistic.cpp
tests/: algorithm_tests.cpp  allocator_tests.cpp  approximate_nearest_neighbor_tests.cpp  data_frame_tests.cpp  data_structures_tests.cpp  distribution_functions_tests.cpp  eigen_solver_tests.cpp  file_tests.cpp  gauss_jordan_elimination_tests.cpp  hash_tests.cpp  logistic_regression_tests.cpp  lu_decomposition_tests.cpp  matrix_basic_tests.cpp  ordinary_least_squares_tests.cpp  pca_tests.cpp  qr_algorithm_tests.cpp  randomized_low_rank_approximation_tests.cpp  regular_expression_tests.cpp  svd_tests.cpp  tree_tests.cpp
tests/datasets/: test_data.h
tests/datasets/iris/: iris_ann.csv  iris_cov.csv  iris_pca.csv  iris_std.csv
